# django-bookkeeper

./: .gitignore  .pr-body.txt  AGENTS.md  CLAUDE.md  Dockerfile.demo  Makefile  README.md  RELEASING.md  docker-compose.yml  pyproject.toml  pytest-e2e.ini
.claude/: launch.json
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
demo/: manage.py
demo/demo_project/: settings.py  urls.py
demo/management/commands/: create_admin.py  seed_demo.py
demo/templates/registration/: login.html
docs/: format-cbz-cbr.md  format-epub.md  format-pdf.md
src/bookkeeper/: __init__.py  admin.py  apps.py  forms.py  hooks.py  manifest.py  models.py  signals.py  urls.py  views.py
src/bookkeeper/migrations/: 0001_initial.py  0002_chapter.py  0003_userbook_cover_override.py  0004_add_cbr_format.py  0005_add_snippet.py  0006_add_amazon_url.py  0007_add_fit_width_pdf_zoom.py
src/bookkeeper/readers/: __init__.py  base.py  cbr.py  cbz.py  epub.py  pdf.py  registry.py
src/bookkeeper/static/bookkeeper/css/: bookkeeper.css  reader.css
src/bookkeeper/static/bookkeeper/js/: bookkeeper.js  reader.js
src/bookkeeper/templates/bookkeeper/: base.html  book_detail.html  book_edit.html  chapter_eval.html  library.html  reader.html
tests/: e2e_settings.py  e2e_urls.py  settings.py  test_api_favorite_delete_cover_rate.py  test_api_highlight_snippet.py  test_api_progress_bookmark_finish.py  test_models.py  test_star_rating_url.py  test_template_smoke.py  test_upload_pipeline.py  urls.py
tests/e2e/: conftest.py  test_reader_smoke.py  test_touch_gestures.py
